--- a/startvote/templates/card.html
+++ b/startvote/templates/card.html
@@ -235,7 +235,7 @@
                             {{ vote.vote_description }}
                         </div>
                     </div>
-                    <a href="{% url 'form' %}"><button type="button" class="btn btn-danger btn-lg btn-block">
+                    <a href="{% url 'vote' %}"><button type="button" class="btn btn-danger btn-lg btn-block">
                         {% if vote.vote_state  == 1 %}
                         未开始
                         {% elif vote.vote_state  == 2 %}
