optimize user login logout

--- a/startvote/templates/index.html
+++ b/startvote/templates/index.html
@@ -48,7 +48,14 @@
             <li><a href="{% url 'fold_demo' %}">fold_demo</a></li>
             <li class="active"><a href="#header">Home</a></li>
             <li><a href="#section-about">About</a></li>
-            <li><a href="{% url 'login' %}">Sign in&nbsp&nbsp<i class="fa fa-sign-in fa-lg"></i></a></li>
+
+             {% if request.user.is_authenticated %}
+                 <li><a href="{% url 'card' %}">Hello! {{ request.user.username }}&nbsp&nbsp<i class="fa fa-sign-in fa-lg"></i></a></li>
+                 <li><a href="{% url 'logout' %}">Log out&nbsp&nbsp<i class="fa fa-sign-in fa-lg"></i></a></li>
+             {% else %}
+                 <li><a href="{% url 'login' %}">Sign in&nbsp&nbsp<i class="fa fa-sign-in fa-lg"></i></a></li>
+             {% endif %}
+
 
         </ul>
       </div>
