--- a/startvote/templates/card.html
+++ b/startvote/templates/card.html
@@ -270,7 +270,7 @@
             </div>
         </div>
 
-        空的card 仅仅用于占位
+{#        空的card 仅仅用于占位#}
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
             <div class="card card-inverse card-info card-null">
                 <img class="card-img-top-null" src="/static/img/null.png">
