optimize user login logout

--- a/startvote/templates/card.html
+++ b/startvote/templates/card.html
@@ -224,24 +224,24 @@
             </div>
     </div>
     <div class="row" style="padding-top: 15px">
-    {%for vote in votes %}
+    {%for result in result_list %}
             <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
                 <div  class="card card-inverse card-info">
                     <img class="card-img-top" src="http://success-at-work.com/wp-content/uploads/2015/04/free-stock-photos.gif">
                     <div class="card-block">
 
-                        <h4 class="card-title">{{ vote.vote_name }}</h4>
+                        <h4 class="card-title">{{ result.vote.vote_name }}</h4>
                         <div class="card-text">
-                            {{ vote.vote_description }}
+                            {{ result.vote.vote_description }}
                         </div>
                     </div>
                     <a href="{% url 'vote' %}"><button type="button" class="btn btn-danger btn-lg btn-block">
-                        {% if vote.vote_state  == 1 %}
-                        未开始
-                        {% elif vote.vote_state  == 2 %}
-                        进行中
+                        {% if result.vote.vote_state  == 1 %}
+                        未开始({{ result.condition }})
+                        {% elif result.vote.vote_state  == 2 %}
+                        进行中({{ result.condition }})
                         {% else %}
-                        已结束
+                        已结束({{ result.condition }})
                         {% endif %}
                     </button> </a>
 
