--- a/startvote/static/assets/demo.css
+++ b/startvote/static/assets/demo.css
@@ -7,18 +7,18 @@
 }
 
 html{
-	background-color: #efefef;
+    background-color: #efefef;
 }
 
 body{
-	font:14px/1.5 Arial, Helvetica, sans-serif;
-	margin:0;
+    font:14px/1.5 Arial, Helvetica, sans-serif;
+    margin:0;
 }
 
 
 header{
     box-sizing: border-box;
-	text-align: center;
+    text-align: center;
     width: 100%;
     padding: 25px 40px;
     background-color: #673AB7;
@@ -28,8 +28,8 @@ header{
 
 header h1{
     float: left;
-	font: normal 24px/1.5 'Open Sans', sans-serif;
-	color: #fff;
+    font: normal 24px/1.5 'Open Sans', sans-serif;
+    color: #fff;
 }
 
 header a{
@@ -102,23 +102,28 @@ ul li{
 }
 
 .main-content{
-    margin-bottom: 75px;
+    margin-bottom: 50px;
+}
+@media (max-width: 767px) {
+    .main-content{
+        margin-bottom: 30px;
+    }
 }
 
 /* -- Demo ads -- */
 
 @media (max-width: 1200px) {
-	#bsaHolder{ display:none;}
+    #bsaHolder{ display:none;}
 }
 
 /* -- Link to Tutorialzine -- */
 
 .tz-link{
-	text-decoration: none;
-	color: #fff !important;
-	font: bold 36px Arial,Helvetica,sans-serif !important;
+    text-decoration: none;
+    color: #fff !important;
+    font: bold 36px Arial,Helvetica,sans-serif !important;
 }
 
 .tz-link span{
-	color: #da431c;
+    color: #da431c;
 }
