--- a/startvote/templates/form.html
+++ b/startvote/templates/form.html
@@ -87,7 +87,8 @@
                 '\n' +
                 '                    </div>' +
                 '                    <div  class="panel panel-default collapse" style="border-color: transparent;box-shadow:0 0px 0px;" id="collapse'+room+'">' +
-                '\n' +'<textarea name="vote_description"></textarea>'
+                '\n' +'<textarea name="vote_description"></textarea>' +
+                 ' <input id="input-b2" style="padding: 5px;font-weight: 300;" name="input-b2" type="file" class="file" data-show-preview="false" >\n'
                 '\n' +
                 '\n' +
                 '                    </div>\n' +
@@ -156,6 +157,8 @@
 
 {#                        <div class="panel-body" style="color: black" >#}
                             <textarea name="vote_description"></textarea>
+                        <input id="input-b2" style="padding: 5px;font-weight: 300;" name="input-b2" type="file" class="file" data-show-preview="false" >
+
 
 {#                        </div>#}
 
